--- a/styles.css
+++ b/styles.css
@@ -58,7 +58,7 @@ html {
 }
 
 .score-calculator input {
-  width: 50%;
+  width: 20%;
   padding: 5px;
   margin-bottom: 10px;
 }
@@ -85,7 +85,7 @@ html {
 
 .status,
 .mppt {
-  width: 45%;
+  width: 30%;
 }
 
 .mppt-section,
@@ -100,20 +100,16 @@ html {
 }
 
 .footer {
-  display: flex;
-  justify-content: space-between;
-  padding: 10px;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 60px;
+  z-index: 10;
   background-color: #eee;
 }
 
-.toggle {
-  display: flex;
-  align-items: center;
-}
 
-#toggle-switch {
-  margin: 0 10px;
-}
 
 .error-message {
   font-size: 0.9em;
