--- a/main-page/main-page.css
+++ b/main-page/main-page.css
@@ -50,12 +50,6 @@ a {
   color: #ffd700;
 }
 
-.weather {
-  margin-top: 10px;
-  margin-right: 150px;
-  font-size: 1.5em;
-}
-
 .clock {
   font-family: Sunergy;
   font-size: 2.5em;
@@ -77,10 +71,13 @@ main {
 .score-calculator {
   flex: 1;
   background-color: #ddd;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   text-align: center;
   padding: 10px;
   max-width: 300px;
+  max-height: 1000px;
   margin: 0 auto;
+  border-radius: 10px;
 }
 
 .score-calculator label {
@@ -100,7 +97,68 @@ main {
   display: flex;
   flex-direction: column;
   justify-content: space-around;
-  padding: 20px 0;
+}
+
+.weather-widget {
+  background-color: #ddd;
+  font-family: Sunergy;
+  border-radius: 10px;
+  padding: 20px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  max-width: 300px;
+  max-height: 1000px;
+  margin-left: 20px;
+}
+
+.weather-input {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  margin-bottom: 20px;
+}
+
+.weather-input input {
+  width: calc(100% - 100px);
+  padding: 10px;
+  border: none;
+  border-radius: 5px;
+  margin-right: 10px;
+}
+
+.weather-input button {
+  width: 80px;
+  padding: 10px;
+  border: none;
+  border-radius: 5px;
+  background-color: #007bff;
+  color: white;
+  cursor: pointer;
+}
+
+.weather-info {
+  text-align: center;
+  font-family: Sunergy;
+}
+
+.weather-info img{
+  
+}
+
+.weather-info h2 {
+  font-size: 2.2em;
+  color: #333;
+  margin-bottom: 5px;
+}
+
+.weather-info h3{
+  font-size: 3em;
+  color: #333;
+}
+
+.weather-info p {
+  font-size: 1.5em;
+  color: #636363;
+  margin-bottom: 5px;
 }
 
 .status,
@@ -113,6 +171,7 @@ main {
 .motor-section {
   padding: 10px;
   border: solid;
+  margin-bottom: 10px;
 }
 
 .mppt-section h4,
