--- a/styles.css
+++ b/styles.css
@@ -20,11 +20,18 @@ html {
   background-color: #9a9090;
 }
 
+main{
+  display: grid;
+  grid-template-rows: 1fr;
+  grid-template-columns: repeat(3, 1fr);
+}
+
 header {
   font-family: SunergyOblique;
   display: flex;
   justify-content: space-between;
   padding: 10px;
+  border-bottom: solid #000;
   background-color: #333;
   color: #fff;
 }
@@ -67,16 +74,21 @@ main {
   font-family: Sunergy;
 }
 
+.score-calculator,
+.weather-widget{
+  width: 100%;
+  height: 100%;
+  max-width: 300px;
+  height: 700px;
+}
+
 .score-calculator {
-  flex: 1;
   background-color: #ddd;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   text-align: center;
-  padding: 10px;
-  max-width: 300px;
-  max-height: 1000px;
-  margin: 0 auto;
-  border-radius: 10px;
+  padding: 20px;
+  border: solid;
+  border-radius: 12px;
 }
 
 .score-calculator label {
@@ -91,30 +103,23 @@ main {
   margin-bottom: 10px;
 }
 
-#result{
-  height: 30px;
-  font-size: 20px;
-  font-weight: bold;
-  color: green;
-  margin-top: 10px;
+.score-calculator h3{
+  font-size: 1.75em;
+  margin-bottom: 5px;
 }
 
-.live-data {
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
+.score-calculator #result{
+  margin-top: 20px;
+  font-size: 2em;
 }
 
 .weather-widget {
   background-color: #ddd;
-  font-family: Sunergy;
-  border-radius: 10px;
-  padding: 20px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  max-width: 300px;
-  max-height: 1000px;
-  margin-left: 20px;
+  text-align: center;
+  padding: 20px;
+  border: solid;
+  border-radius: 12px;
 }
 
 .weather-input {
@@ -147,57 +152,104 @@ main {
   font-family: Sunergy;
 }
 
-.weather-info img{
-  
-}
-
 .weather-info h2 {
-  font-size: 2.2em;
+  font-size: 2.5em;
   color: #333;
-  margin-bottom: 5px;
 }
 
-.weather-info h3{
+.weather-info h3 {
   font-size: 3em;
   color: #333;
 }
 
 .weather-info p {
-  font-size: 1.5em;
+  font-size: 1.4em;
   color: #636363;
   margin-bottom: 5px;
 }
 
-.status,
-.mppt {
+#result {
+  height: 30px;
+  font-size: 20px;
+  font-weight: bold;
+  color: #13cc4e;
+  margin-top: 10px;
+}
+
+.live-data {
+  display: grid;
+  grid-template-rows: repeat(2, auto);
+  grid-template-columns: auto;
   width: 100%;
-  margin-bottom: 20px;
+}
+
+.status{
+  display: grid;
+  grid-template-rows: auto;
+  grid-template-columns: repeat(2, auto);
+  gap: 16px;
+  padding: 20px;
+  padding-bottom: 0;
+}
+
+.status-col1,
+.status-col2{
+  background-color: #ddd;
+  border: solid;
+  border-radius: 12px;
+  padding-top: 35px;
+}
+
+.status p{
+  font-size: 3em;
+  text-align: center;
+}
+
+.mppt{
+  display: grid;
+  grid-template-rows: auto;
+  grid-template-columns: repeat(4, auto);
+  gap: 16px;
+  padding: 20px;
+  padding-top: 0;
 }
 
 .mppt-section,
 .motor-section {
-  padding: 10px;
+  margin: auto;
+  width: 100%;
+  padding: 20px;
   border: solid;
-  margin-bottom: 10px;
+  border-radius: 12px;
+  text-align: center;
+  background-color: #ddd;
 }
 
 .mppt-section h4,
 .motor-section h4 {
+  font-size: 2em;
   margin: 0 0 10px 0;
+}
+
+.mppt-section p,
+.motor-section p{
+  font-size: 1.5em;
+  color: #636363;
 }
 
 .footer {
   width: 100%;
-  height: 60px;
-  background-color: #eee;
+  height: 130px;
+  border-top: solid #000;
+  background-color: #333;
   text-align: center;
   line-height: 60px;
   font-family: Sunergy;
 }
 
 .error-message {
-  font-size: 0.9em;
-  color: #f00;
+  font-size: 1.75em;
+  color: #d40028;
 }
 
 /* Responsive Design */
@@ -206,17 +258,13 @@ main {
     flex-direction: row;
   }
 
-  .score-calculator {
-    max-width: 250px;
-  }
-
   .live-data {
-    flex-direction: row;
     padding-left: 20px;
+    padding-right: 20px;
   }
 
   .status,
   .mppt {
-    width: 45%;
+    width: 100%;
   }
 }
