--- a/client/src/styles.module.css
+++ b/client/src/styles.module.css
@@ -42,11 +42,11 @@ a {
 }
 
 .weather,
-.team-logo .clock {
+.teamLogo .clock {
   margin: 0;
 }
 
-.team-logo {
+.teamLogo {
   font-weight: bold;
   font-size: 2em;
   margin-top: 6px;
@@ -74,15 +74,15 @@ main {
   font-family: Sunergy;
 }
 
-.score-calculator,
-.weather-widget{
+.scoreCalculator,
+.weatherWidget{
   width: 100%;
   height: 100%;
   max-width: 300px;
   height: 700px;
 }
 
-.score-calculator {
+.scoreCalculator {
   background-color: #ddd;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   text-align: center;
@@ -91,29 +91,32 @@ main {
   border-radius: 12px;
 }
 
-.score-calculator label {
+.scoreCalculator label {
   display: block;
   width: 100%;
   margin-bottom: 5px;
 }
 
-.score-calculator input {
+.scoreCalculator input {
   width: 100%;
   padding: 5px;
   margin-bottom: 10px;
 }
 
-.score-calculator h3{
+.scoreCalculator h3{
   font-size: 1.75em;
   margin-bottom: 5px;
 }
 
-.score-calculator #result{
-  margin-top: 20px;
+.result {
+  height: 30px;
   font-size: 2em;
+  font-weight: bold;
+  color: #11b445;
+  margin-top: 25px;
 }
 
-.weather-widget {
+.weatherWidget {
   background-color: #ddd;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   text-align: center;
@@ -122,14 +125,14 @@ main {
   border-radius: 12px;
 }
 
-.weather-input {
+.weatherInput {
   display: flex;
   justify-content: space-evenly;
   align-items: center;
   margin-bottom: 20px;
 }
 
-.weather-input input {
+.weatherInput input {
   width: calc(100% - 100px);
   padding: 10px;
   border: none;
@@ -137,7 +140,7 @@ main {
   margin-right: 10px;
 }
 
-.weather-input button {
+.weatherInput button {
   width: 80px;
   padding: 10px;
   border: none;
@@ -147,36 +150,28 @@ main {
   cursor: pointer;
 }
 
-.weather-info {
+.weatherInfo {
   text-align: center;
   font-family: Sunergy;
 }
 
-.weather-info h2 {
+.weatherInfo h2 {
   font-size: 2.5em;
   color: #333;
 }
 
-.weather-info h3 {
+.weatherInfo h3 {
   font-size: 3em;
   color: #333;
 }
 
-.weather-info p {
+.weatherInfo p {
   font-size: 1.4em;
   color: #636363;
   margin-bottom: 5px;
 }
 
-#result {
-  height: 30px;
-  font-size: 20px;
-  font-weight: bold;
-  color: #13cc4e;
-  margin-top: 10px;
-}
-
-.live-data {
+.liveData {
   display: grid;
   grid-template-rows: repeat(2, auto);
   grid-template-columns: auto;
@@ -192,8 +187,8 @@ main {
   padding-bottom: 0;
 }
 
-.status-col1,
-.status-col2{
+.statusCol1,
+.statusCol2{
   background-color: #ddd;
   border: solid;
   border-radius: 12px;
@@ -214,8 +209,8 @@ main {
   padding-top: 0;
 }
 
-.mppt-section,
-.motor-section {
+.mpptSection,
+.motorSection {
   margin: auto;
   width: 100%;
   padding: 20px;
@@ -225,21 +220,21 @@ main {
   background-color: #ddd;
 }
 
-.mppt-section h4,
-.motor-section h4 {
+.mpptSection h4,
+.motorSection h4 {
   font-size: 2em;
   margin: 0 0 10px 0;
 }
 
-.mppt-section p,
-.motor-section p{
+.mpptSection p,
+.motorSection p{
   font-size: 1.5em;
   color: #636363;
 }
 
 .footer {
   width: 100%;
-  height: 130px;
+  height: 135px;
   border-top: solid #000;
   background-color: #333;
   text-align: center;
@@ -247,7 +242,7 @@ main {
   font-family: Sunergy;
 }
 
-.error-message {
+.errorMessage {
   font-size: 1.75em;
   color: #d40028;
 }
@@ -258,7 +253,7 @@ main {
     flex-direction: row;
   }
 
-  .live-data {
+  .liveData {
     padding-left: 20px;
     padding-right: 20px;
   }
