--- a/client/src/styles.module.css
+++ b/client/src/styles.module.css
@@ -121,6 +121,7 @@ main {
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   text-align: center;
   padding: 20px;
+  padding-top: 30px;
   border: solid;
   border-radius: 12px;
 }
