--- a/client/src/styles.module.css
+++ b/client/src/styles.module.css
@@ -182,10 +182,11 @@ main {
 .status{
   display: grid;
   grid-template-rows: auto;
-  grid-template-columns: repeat(2, auto);
+  grid-template-columns: repeat(2, 1fr);
   gap: 16px;
   padding: 20px;
   padding-bottom: 0;
+  height: 100%;
 }
 
 .statusCol1,
@@ -194,6 +195,8 @@ main {
   border: solid;
   border-radius: 12px;
   padding-top: 35px;
+  height: 100%;
+  overflow: hidden;
 }
 
 .status p{
@@ -204,10 +207,11 @@ main {
 .mppt{
   display: grid;
   grid-template-rows: auto;
-  grid-template-columns: repeat(4, auto);
+  grid-template-columns: repeat(4, 1fr);
   gap: 16px;
   padding: 20px;
   padding-top: 0;
+  height: 100%;
 }
 
 .mpptSection,
@@ -219,6 +223,7 @@ main {
   border-radius: 12px;
   text-align: center;
   background-color: #ddd;
+  overflow: hidden;
 }
 
 .mpptSection h4,
